--- a/experiments.html
+++ b/experiments.html
@@ -19,9 +19,9 @@
         </nav>
 
         <section class="script">
-            <h2>
+            <h3>
                 Example of Canvas and Script
-            </h2>
+            </h3>
             <!--This is an example of canvas and script together-->
             <canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;"> </canvas>
             <script>
@@ -35,13 +35,13 @@
 
         <!--Example of Images-->
         <section class="img">
-            <h2> Image</h2>
-            <img src="images\pokemon_detective_pikachu_magnifying_glass.jpg">
+            <h3> Image</h3>
+            <img src="images/pokemon_detective_pikachu_magnifying_glass.jpg" alt="Detective Pikachu">
         </section>
 
         <!--Example of Links-->
         <section class="links">
-            <h2>Links</h2>
+            <h3>Links</h3>
             <ul>
                 <li><a href="https://www.polygon.com/entertainment/23560467/pokemon-detective-pikachu-2-release-update">Detective Pikachu</a></li>
             </ul>
@@ -49,9 +49,64 @@
 
         <!--Example of Button-->
         <section id="button">
-            <h2>Button</h2>
+            <h3>Button</h3>
             <button type="button">Button</button>
         </section>
+
+        <!--Example of inline-->
+        <section class="iframe">
+            <h3>iframe</h3>
+            <iframe
+                id="inlineFrameExample"
+                title="Inline Frame Example"
+                width="300"
+                height="200"
+                src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
+            </iframe>
+        </section>
+
+        <section class="code">
+            <h3>Code</h3>
+            <p>The code <code>pop()</code> method removes an element from the array and returns the element removed.</p>
+        </section>
+
+        <section class="datalist">
+            <h3>Datalist</h3>
+            <label for="color-choice">Choose a color:</label>
+            <input list="colors" id="color-choice" name="color-choice" />
+
+            <datalist id="colors">
+                <option value="Red"></option>
+                <option value="Blue"></option>
+                <option value="Yellow"></option>
+                <option value="Green"></option>
+                <option value="Orange"></option>
+                <option value="Purple"></option>
+            </datalist>
+        </section>
+
+        <section class="figure">
+            <h3>Figure</h3>
+            <figure>
+                <img src="images/Baby penguin wikimedia commons.jpg" alt="Baby Penguin" />
+                <figcaption>A baby penguin</figcaption>
+            </figure>
+            
+            
+
+        </section>
+
+        <section class="aside">
+            <h3>Aside</h3>
+            <p>The black and white "tuxedo" look donned by most penguin species is a clever camoflage called countershading.</p>
+            <aside>
+                <p>When swimming, the black on their backs helps them blend in with the darkness of the ocean from predators viewing from above.
+                </p>
+            </aside>
+            <p>Their white bellies help them blend in with the bright surface of the ocean when viewed by predators and prey from below.</p>
+            <a href="https://www.cabq.gov/artsculture/biopark/news/10-cool-facts-about-penguins">Cool Facts about Penguins</a>
+        </section>
+
     </main>
 </body>
 </html>
