--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
         head ./
         title ./
         meta ./
-        link
+        link ./
         script ./
         style
         body ./
         main ./
         h1 ./
         h2 ./
-        h3
+        h3 ./
         p ./
         section ./
         header ./
         footer ./
-        aside
-        nav
+        aside ./
+        nav ./
         div
         span
         br
@@ -25,13 +25,13 @@
         i
         strong
         em
-        code
+        code ./
         pre
         hr
-        a
+        a ./
         img ./
         picture
-        iframe
+        iframe ./
         audio
         video
         source
@@ -47,9 +47,9 @@
         legend
         input
         textarea
-        datalist
+        datalist ./
         select
-        option
+        option ./
         details
         summary
         button ./
@@ -61,12 +61,13 @@
         caption
         col
         colgroup
-        figure
-        figcaption-->
+        figure ./
+        figcaption ./
+        -->
 <head>
     <meta charset="utf-8" />
     <title>Homepage</title>
-    <link href />
+    
 </head>
 
 <body>
