--- a/experiments.html
+++ b/experiments.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Labs/Experiments</title>
-    <link href />
+    
 </head>
 <body>
     <main>
@@ -88,7 +88,7 @@
         <section class="figure">
             <h3>Figure</h3>
             <figure>
-                <img src="images/Baby penguin wikimedia commons.jpg" alt="Baby Penguin" />
+                <img src="images/Baby_penguin_wikimedia_commons.jpg" alt="Baby Penguin" />
                 <figcaption>A baby penguin</figcaption>
             </figure>
             
